# report_generator

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  ROADMAP.md  codex-review.md  comunicacion_agente.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  environment.yml  json_auxiliar.jsonc  package-lock.json  package.json  pendientes_report_generator.txt  pip_reqs_requirements.txt  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  restart_backend.bat  rgenerator_environment.yml  run_software.bat  run_software.sh  run_tests.py  setup.py  skills.md  streamlit_app.py  streamlit_style.css  streamlit_utils.py  temp_pipelines.json  testing_06_05_2026_12_30.md  wake.html
.claude/: plan-add-component-modal.md  plan-recharts-to-plotly.md  settings.local.json
alembic/: env.py
aux_files/: call_lista_curso.txt  connect.ipynb  cursos.html  estado_matricula.html  list_response.html  lista_rbd.html  script_response.py  tabla_alumnos.html
backend/: api.py  auditing.py  auth.py  cli.py  config.py  database.py  init_indicators_db.py  main.py  models.py  read_pipe.py  schemas_chart.py  schemas_mapping.py  schemas_table.py  temp.json  test_eval.py
config/: charts_schema_generated.json  settings.toml  simce.txt  simce_estudiantes_lenguaje.json  simce_estudiantes_lenguaje.txt
docs/: README.md  charts_schema_docs.md  docker-deploy.md  plot_tools.md  work_log.md
frontend/: .env.production  .env.staging  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
pages/: 1_Evaluaciones.py  2_Resultados.py
scripts/: _check_db.py  _smoke_pdf.py  (+34 more)
(+376 files in other folders)
