[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rgenerator"
dynamic = ["version"]
description = "Motor de ETL y reportería académica para Fundación PHP"
readme = "README.md"
authors = [
    {name = "Fundación PHP"},
    {name = "Miguel Godoy Díaz", email = "magodoydiaz@gmail.com"}
]
requires-python = ">=3.10"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.23",
    "matplotlib>=3.7",
    "camelot-py[cv]>=0.11",
    "PyMuPDF>=1.23",
    "Pillow>=10.0",
    "tqdm>=4.65",
    "xlrd>=2.0",
    "requests>=2.31",
    "openpyxl",
    "docxtpl",
    "docx2pdf",
    "fastapi",
    "uvicorn"
]

[project.urls]
Homepage = "https://github.com/fphp/website-ui"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
include = ["rgenerator", "rgenerator.*"]

[tool.setuptools.dynamic]
version = {attr = "rgenerator._version.__version__"}
